[package]
name = "simple-rs-os"
version = "0.1.0"
edition = "2021"

[[test]]
name = "stack_overflow"
harness = false

# the profile used for `cargo build`
#[profile.dev]
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
#[profile.release]
#panic = "abort" # disable stack unwinding on panic

# these dependencies are pretty old versions
# i haven't tried to modify the tutorial code 
# to work with the new versions
[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.9.8"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[package.metadata.bootimage]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-timeout = 300 # (in seconds)
